github-actions-terraform-eks-course/module-05-kubernetes/solution/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: course-app
  labels:
    app.kubernetes.io/name: course-app
    app.kubernetes.io/part-of: github-actions-terraform-eks-course
    environment: learning
