github-actions-terraform-eks-course/module-05-kubernetes/solution/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-nginx
  namespace: course-app
  labels:
    app: course-nginx
spec:
  type: ClusterIP
  selector:
    app: course-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
